tests/ui/privacy/missing-mir-priv-bounds.stderr
error: missing optimized MIR for `dep::m::Unreachable::generic::<i32>` in the crate `missing_mir_priv_bounds_extern`
   |
note: missing optimized MIR for this item (was the crate `missing_mir_priv_bounds_extern` compiled with `--emit=metadata`?)
  --> $DIR/auxiliary/missing-mir-priv-bounds-extern.rs:34:9
   |
LL |         pub fn generic<T>() {}
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

